--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600;700&family=PT+Sans:wght@400;700&family=Comfortaa:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;700&family=Raleway:wght@400;700&family=Comfortaa:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <title>React App</title>
