--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;700&family=Raleway:wght@400;700&family=Comfortaa:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>SmartMonke</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
